# Mosaify

./: .gitignore  .gitmodules  CMakeLists.txt  Color.cpp  Color.h  Image.cpp  Image.h  ImageUtil.py  Mosaify.cpp  Mosaify.py  MosaifyPy.i  MosaifyPy.py  MosaifyPy_wrap.cxx  README.md  example.cpp  example.i  glm  hello_test.cpp  libboard  library.h
.github/workflows/: cmake-single-platform.yml  macos-platform.yml  ubuntu-platform.yml
Mosaify/: Image.h  Mosaify.h
example/: ImageUtil.py  Mosaify.py  MosaifyPy.py  MosaifyPy_Darwin.py  app.py  main.py  test.py
example/input/tile.input/: out
example/templates/: index.html  list.html
mosaic_html/: images.json  images2.json  index.html  run.sh
